# ai_agent_hackaton

./: .env_sample  README.md  apillama.py  chatbot.py  consolidated.00.pth.metadata  endpoint.py  manage.py  params.json  pyproject.toml  requirements.txt  userform
agent/: ai_service.py  exceptions.py  google_fit_service.py  urls.py  views.py
ai_agent/: asgi.py  settings.py  urls.py  wsgi.py
